mdapipkg/unpackaged/objects/CTI__c.object
<CustomObject>
    <fields>
        <fullName>Route__c</fullName>
        <description>Route is an flight&apos;s area of Flight on CTI.</description>
        <formula>IF(ISBLANK(Area__c),&quot;Unidentified&quot;,Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STN_F__c</fullName>
        <formula>IF( ISBLANK(Station__c) || Station__c == &quot;NA&quot;, &quot;Unidentified&quot;,  TEXT(STN__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STN__c</fullName>
        <description>To descibe Statin that case ocuured as &apos;Bangkok&apos;, &apos;Abroad&apos; &apos;Provincial&apos;, &apos;Unidentified&apos;.</description>
        <label>STN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Abroad</fullName>
                </value>
                <value>
                    <fullName>Provincial</fullName>
                </value>
                <value>
                    <fullName>Unidentified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seat_Number__c</fullName>
        <description>Pull data from Passenger&apos;s Accepted Seat but if Passenger&apos;s Accepted Seat is blank, pull value from Passenger&apos;s Booking Seat.</description>
        <formula>IF( Caseid__r.Passengerid__r.Checkin_Seat__c != null, Caseid__r.Passengerid__r.Checkin_Seat__c , IF(ISBLANK(Caseid__r.Passengerid__r.Booking_Seat__c),&quot;Unidentified&quot;,Caseid__r.Passengerid__r.Booking_Seat__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seat Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_F__c</fullName>
        <description>Flight&apos;s Sector from Sector_txt__c which have &apos;-&apos; between 2 sector and default value as XXX. (e.g. BKK-HKG)</description>
        <formula>IF(ISBLANK( Sector_txt__c ),&apos;XXX&apos;, Sector_txt__c )</formula>
        <label>Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>Flight&apos;s Sector from Sector_txt__c which have no &apos;-&apos; between 2 sector and default value as XXX. (e.g. BKKHKG)</description>
        <formula>IF( OR(Sector_txt__c = &quot;XXX&quot;,ISBLANK(Sector_txt__c)),&quot;XXX&quot;, 
LEFT(Sector_txt__c ,3) &amp; RIGHT(Sector_txt__c ,3))</formula>
        <label>Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_txt__c</fullName>
        <description>Flight&apos;s Sector from user input.</description>
        <label>Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Ring__c</fullName>
        <description>Return null value to used in report.</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Ring</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Touchpoints__c</fullName>
        <description>Combine for some CTI&apos;s Category and Type 1.

For value from Category, this field pull just following value:
- &apos;Boarding and Departure Area&apos;
- &apos;Check-in and Service before immigration&apos;
- &apos;Handling of flight Irregularities&apos;
- &apos;Reservation and Ticketing Service&apos;</description>
        <formula>IF(  ISPICKVAL(Category__c,&apos;Boarding and Departure Area&apos;) ||
ISPICKVAL(Category__c,&apos;Check-in and Service before immigration&apos;) ||
ISPICKVAL(Category__c,&apos;Handling of flight Irregularities&apos;) ||
ISPICKVAL(Category__c,&apos;Lounges&apos;) ||
ISPICKVAL(Category__c,&apos;Reservation and Ticketing Service&apos;),
TEXT(Category__c),
Type1__c
)</formula>
        <label>Services / Touchpoints</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Meal__c</fullName>
        <label>Special Meal</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Station_Type__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Station Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <description>Displayed Station from CTI_Station__c with default null valus as &apos;Unidentified&apos;.</description>
        <formula>IF( ISBLANK(CTI_Station__c) , &quot;Unidentified&quot;, CTI_Station__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Station</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Passenger_Flown__c</fullName>
        <formula>Passenger_Flown__r.Total_Passengers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Passenger Flown</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Class__c</fullName>
        <description>Travel class is a passenger&apos;s Accepted class which default null value as &apos;Unidentified&apos;.</description>
        <formula>IF(NOT(ISBLANK(TEXT(Accepted_Class__c) )) &amp;&amp; NOT(ISPICKVAL( Accepted_Class__c , &apos;Unidentified&apos;)),
TEXT( Accepted_Class__c ),
&apos;Unidentified&apos;)</formula>
        <label>Travel Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type1__c</fullName>
        <description>Type 1 is sub of CTI&apos;s Category.</description>
        <formula>IF(FIND(&quot; &gt; &quot;, TEXT(Type__c)) &gt; 0,
TRIM(SUBSTITUTE(TEXT(Type__c), RIGHT(TEXT(Type__c), LEN(TEXT(Type__c)) - FIND(&quot; &gt; &quot;, TEXT(Type__c))), &quot;&quot;)),TEXT(Type__c))</formula>
        <label>Type1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type2__c</fullName>
        <description>Type 2 is sub of CTI&apos;s Type 1.</description>
        <formula>SUBSTITUTE(Text(Type__c) , LEFT(Text(Type__c), FIND(&quot;&gt;&quot;, Text(Type__c))), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_2_Item_1_Item2__c</fullName>
        <description>Concat value from Type 2, Item 1, and Item 2 which in format &apos;Type 2 &gt; Item 1 &gt; Item 2&apos;.</description>
        <formula>Type2__c &amp; &apos; &gt; &apos; &amp;  Item1__c &amp; &apos; &gt; &apos; &amp; Item2__c</formula>
        <label>Type 2 &gt; Item 1 &gt; Item 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field is for user input. Type value is concate between Type 1 and Type 2 which in format &apos;Type 1 &gt; Type 2&apos;.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Aircraft</fullName>
                </value>
                <value>
                    <fullName>Alternative Flight Arrangement</fullName>
                </value>
                <value>
                    <fullName>Announcement / Information</fullName>
                </value>
                <value>
                    <fullName>Announcement in Lounge</fullName>
                </value>
                <value>
                    <fullName>Announcement on Board &gt; Cabin crew announcement</fullName>
                </value>
                <value>
                    <fullName>Announcement on Board &gt; Others</fullName>
                </value>
                <value>
                    <fullName>Announcement on Board &gt; Pilot announcement</fullName>
                </value>
                <value>
                    <fullName>Arrangement during irregularities</fullName>
                </value>
                <value>
                    <fullName>Attitude and Care of Cabin Crew</fullName>
                </value>
                <value>
                    <fullName>Attitude and Care of Check-in Staff</fullName>
                </value>
                <value>
                    <fullName>Attitude and Care of Check-in staff at Transfer desk</fullName>
                </value>
                <value>
                    <fullName>Attitude and Care of Lost and Found Staff on Arrival</fullName>
                </value>
                <value>
                    <fullName>Attitude and Care of Lounge Staff</fullName>
                </value>
                <value>
                    <fullName>Attitude and Care of Other Airport Staff</fullName>
                </value>
                <value>
                    <fullName>Attitude and Care of Other Arrival Staff</fullName>
                </value>
                <value>
                    <fullName>Attitude and Care of Reservation &amp; Ticketing Staff</fullName>
                </value>
                <value>
                    <fullName>Attitude and Care of Reservation &amp; Ticketing Staff at Airport</fullName>
                </value>
                <value>
                    <fullName>Attitude and Care of Reservation &amp; Ticketing Staff at Transfer desk</fullName>
                </value>
                <value>
                    <fullName>Attitude and Care of Special Unit Staff (LP-S)</fullName>
                </value>
                <value>
                    <fullName>Attitude and Care of Special Unit staff (LP-S) on Arrival</fullName>
                </value>
                <value>
                    <fullName>Attitude and Care of staff at boarding and departure area</fullName>
                </value>
                <value>
                    <fullName>Attitude and Care of Staff Concern</fullName>
                </value>
                <value>
                    <fullName>Availability of check-in counter</fullName>
                </value>
                <value>
                    <fullName>Baggage Handling at check-in</fullName>
                </value>
                <value>
                    <fullName>Baggage Handling on Arrival</fullName>
                </value>
                <value>
                    <fullName>Benefit/Privilege/Global Recognition</fullName>
                </value>
                <value>
                    <fullName>Beverage in Lounge</fullName>
                </value>
                <value>
                    <fullName>Boarding Announcement</fullName>
                </value>
                <value>
                    <fullName>Boarding Gate Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Issue_F__c</fullName>
        <description>Type of issues with number e.g. &apos;1.Complaint&apos;</description>
        <formula>IF(
Text(Type_of_Issue__c) == &quot;Complaint&quot;,&quot;1.Complaint&quot;,
IF(
Text(Type_of_Issue__c) == &quot;Commendation&quot;,&quot;2.Commendation&quot;,
IF(
Text(Type_of_Issue__c) == &quot;Suggestion&quot;,&quot;3.Suggestion&quot;,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Issue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Issue__c</fullName>
        <description>To identify type of CTI as &apos;Complaint&apos;, &apos;Commend&apos;, &apos;Suggstion&apos;.</description>
        <label>Type of Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint</fullName>
                    <color>#FF9900</color>
                </value>
                <value>
                    <fullName>Commendation</fullName>
                    <color>#33CC00</color>
                </value>
                <value>
                    <fullName>Suggestion</fullName>
                    <color>#6600CC</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Case created year.</description>
        <formula>TEXT(YEAR(DATEVALUE(Caseid__r.CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>CTI</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CTI00{0000000000}</displayFormat>
        <label>CTI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CTIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>